src/test/test-models/bad/err-nested-parens.stan
transformed data {
  real x;
  x <- 2 + (());
}
